Demonstrate '--permit-illegal-access'